@@ -50,6 +50,7 @@ Mantis
  * Added bug history functionality.
  * Fixed defects with updating project categories and versions.
  * Removed most file variables from default/config_inc2.php.
+ * Added support for auto-assigning of bugs when a default user is specified for the category and if bug is not pre-assigned.
 
 2002.05.19  -  0.17.3
 
